--- a/02. display-card/style.css
+++ b/02. display-card/style.css
@@ -6,7 +6,7 @@
   /* * color variable */
 
   --color-dark: #1a120b;
-  --color-stroke: #dc0000;
+  --color-storke: #e1d7c6;
   --color-white: #f0e9d2;
   --dreamy-pink: #ff8e9e;
 }
@@ -36,6 +36,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: var(--color-dark);
+  padding-block: 6%;
 }
 
 main {
@@ -43,7 +44,8 @@ main {
   height: max-content;
   overflow: hidden;
 
-  background-color: var(--color-stroke);
+  background-color: var(--color-dark);
+  outline: 1px solid var(--color-white);
 
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -103,12 +105,14 @@ main {
 
 .below-card > div {
   height: fit-content;
-  outline: 2px solid var(--color-white);
+  outline: 2px solid var(--color-storke);
+  opacity: 0.8;
 }
 
 .below-card > div:is(:hover) {
-  transition: all 100ms ease-out;
-  opacity: 0.8;
+  transition: all 10ms;
+  cursor: grab;
+  opacity: 1;
 }
 
 .hidden {
