--- a/10. border-animation/style.css
+++ b/10. border-animation/style.css
@@ -16,7 +16,8 @@
 }
 
 body {
-  /* background: var(--purple-9); */
+  background: var(--purple-12);
+  isolation: isolate;
   display: grid;
   place-content: center;
 }
@@ -24,7 +25,7 @@ body {
 .card {
   block-size: var(--height);
   inline-size: var(--width);
-  background-color: var(--pink-12);
+  background-color: var(--purple-12);
   border-radius: var(--radius-2);
   position: relative;
 }
@@ -45,20 +46,26 @@ body {
     var(--purple-8),
     var(--red-8),
     var(--orange-8),
-    var(--yellow-6)
+    var(--yellow-6),
+    var(--lime-6)
   );
-  /* background: var(--gradient-18); */
-  animation: spin 2s linear infinite;
+  animation: spin 4s linear infinite;
 }
 
 .card::after {
   filter: blur(4rem);
+  background-image: conic-gradient(
+    from var(--gradient-angle),
+    var(--lime-6),
+    var(--blue-6),
+    var(--purple-8),
+    var(--red-8),
+    var(--orange-8),
+    var(--yellow-6)
+  );
 }
 
 @keyframes spin {
-  0% {
-    --gradient-angle: 0deg;
-  }
   100% {
     --gradient-angle: 360deg;
   }
