style edit, Functionality working fine

--- a/11. animating-Dialoge-Element/file-upload/src/index.css
+++ b/11. animating-Dialoge-Element/file-upload/src/index.css
@@ -2,10 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  width: 100vw;
-  height: 100%;
+#root {
+  width: 100%;
+  height: 100vh;
   background-color: #fff;
-  isolation: isolate;
-  position: relative;
 }
